--- a/roles/vault/templates/vault.unseal.j2
+++ b/roles/vault/templates/vault.unseal.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-{% for key in vault_keys %}vault unseal {{ vault_command_options }} {{ key }}
+{% for key in vault_keys %}vault unseal {{ vault_command_options | regex_replace('\n', '') }} {{ key | regex_replace('\n', '') }}
 {% endfor %}
 
 exit 0
