--- a/roles/mesos/templates/mesos-agent.sysconfig.j2
+++ b/roles/mesos/templates/mesos-agent.sysconfig.j2
@@ -17,6 +17,8 @@ MESOS_CONTAINERIZERS=docker,mesos
 MESOS_EXECUTOR_REGISTRATION_TIMEOUT={{ mesos_executor_registration_timeout }}
 MESOS_WORK_DIR={{ mesos_work_dir }}
 MESOS_ISOLATION={{ mesos_isolation }}
+MESOS_GC_DELAY={{ mesos_gc_delay }}
+MESOS_GC_DISK_HEADROOM={{ mesos_gc_disk_headroom }}
 
 # authentication
 {% if not (do_mesos_follower_auth|bool) %}# {% endif %}MESOS_CREDENTIAL=file:///etc/sysconfig/mesos-agent-credential
