--- a/roles/kafka/templates/kafka-brokers.sh.j2
+++ b/roles/kafka/templates/kafka-brokers.sh.j2
@@ -9,7 +9,7 @@ while :; do
     if [[ $(consul-cli health-checks $svc | jq -r '.[].Status') == 'passing' ]]; then
         echo "Kafka scheduler is up and running"
 
-        api=$(consul-cli catalog-service $svc | jq -r '.[]|.ServiceAddress + ":" + (.ServicePort|tostring)')
+        api=$(consul-cli catalog service $svc | jq -r '.[]|.ServiceAddress + ":" + (.ServicePort|tostring)')
 
 {% for broker_num in range(1, kafka_broker_count + 1) %}
         # add broker
